# nba_agent

./: .cursorrules  .gitignore  DEVELOPMENT_PRIORITIES.md  Dockerfile  LICENSE  README.md  SETUP.md  UX_ENHANCEMENTS.md  agent.py  app.py  app_ux_enhanced.py  app_ux_improved.py  cache.py  chat.py  docker-compose.yml  launcher.py  pyproject.toml  requirements.txt  run_enhanced_demo.py  run_judgment_tests.py  run_ux_demo.py  start_web.sh  test_enhanced_queries.py  tools.py  tools_new.py  tools_test.py
apps/: app.py  app_ux_improved.py  chat.py  chat_planner.py  enhanced_chat.py
archive/: app_enhanced.py  debug_luka_detailed.py  debug_stats.py  demo_visualization.py  smart_interface.py  test_new_tools.py  visualizations.py
docs/: QUERY_FLEXIBILITY_GUIDE.md  VISUALIZATION_ROADMAP.md
scripts/: start_web.sh
src/: agent.py  cache.py  config.py  enhanced_agent.py  enhanced_tools.py  error_handling.py  logger.py  query_parser.py  tools.py  ux_enhancements.py  validation.py
tests/: README.md  __init__.py  test_agent_evaluation.py  test_agent_performance.py  test_agent_tracing.py  test_core.py  test_dataset_builder.py  test_tools.py
tests/fixtures/: arena_5.json  https:__www.balldontlie.io_api_v1_games?team_ids[]=5&per_page=1.json  injuries_5.json  roster_5.json  schedule_5.json  standings_2024-25.json  stats_101108_2024-25.json  stats_1626157_2024-25.json  stats_1626164_2024-25.json  stats_1627759_2024-25.json  stats_1627783_2024-25.json  stats_1628368_2024-25.json  stats_1628369_2024-25.json  stats_1628378_2024-25.json  stats_1628389_2024-25.json  stats_1628983_2024-25.json  stats_1629027_2024-25.json  stats_1629029_2024-25.json  stats_1629627_2024-25.json  stats_1629630_2024-25.json  stats_201142_2024-25.json  stats_201935_2024-25.json  stats_201939_2024-25.json  stats_201942_2024-25.json  stats_201950_2024-25.json  stats_202331_2024-25.json  stats_202681_2024-25.json  stats_202691_2024-25.json  stats_202695_2024-25.json  stats_202710_2024-25.json  stats_203076_2024-25.json  stats_203078_2024-25.json  stats_203081_2024-25.json  stats_203110_2024-25.json  stats_203497_2024-25.json  stats_203507_2024-25.json  stats_203954_2024-25.json  stats_203999_2024-25.json  stats_2544_2024-25.json
